# TeamWorkMemory

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  railway.json  requirements.txt
.github/workflows/: ci.yml  deploy-railway.yml
app/: __init__.py  main.py  schemas.py
app/api/: endpoints.py
app/core/: auth.py  config.py  errors.py  validation.py
app/memory/: base.py  inmemory.py  store.py
tests/: conftest.py  test_memory.py
