[project]
name = "memory-server"
version = "0.1.0"
description = "Shared memory server for Codex builder agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "langgraph>=0.6.0",
  "pydantic-settings>=2.10.0",
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
  "python-dotenv>=1.1.0",
  "redis>=6.2.0",
  "ruff>=0.12.0",
  "uvicorn[standard]>=0.35.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

